Using ArrayList for more efficient iterating, this alone eliminate about 40% of the run time in get()